--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 
 kotlin = "2.2.21"
 agp = "8.10.1"
+maven-publish = "0.35.0"
 compose = "1.9.3"
 androidx-activityCompose = "1.11.0"
 androidx-lifecycle = "2.9.6"
@@ -15,7 +16,8 @@ molecule-runtime = { module = "app.cash.molecule:molecule-runtime", version = "2
 [plugins]
 
 multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-android-library = { id = "com.android.library", version.ref = "agp" }
+android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
+maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "maven-publish" }
 compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 android-application = { id = "com.android.application", version.ref = "agp" }
